--- a/pages/p5/953436.md
+++ b/pages/p5/953436.md
@@ -1,4 +1,4 @@
-### 香港交易所CEO提前离任 此前套现1.67亿港元(图)
+### 偷都这么牛？小鹏汽车要打得马斯克找不着东(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align: center;">
-  <img alt="香港交易所 港交所 李小加" src="https://img2.secretchina.com/pic/2018/6-30/p2203624a243984225-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="马斯克 特斯拉 小鹏汽车 代码" src="https://img2.secretchina.com/pic/2018/7-7/p2208931a977405153-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   香港交易CEO李小加将于2020年12月31日卸任。（图片来源：Getty Images）
+   马斯克已经不是第一次谴责小鹏汽车剽窃。（图片来源：Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,67 +21,87 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月29日讯】（看中国记者文龙综合报导）9月29日，
+  【看中国2020年11月22日讯】（看中国记者丁晓雨综合报导）近日，
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/香港交易所" target="_blank">
-    香港交易所
+   <span href="https://www.secretchina.com/news/gb/tag/马斯克" target="_blank">
+    马斯克
    </span>
   </strong>
-  发布消息称，CEO
+  的
   <strong>
-   李小加
+   特斯拉
   </strong>
-  将于2020年12月31日卸任。原定于2021年10月期满卸任的李小加，此前大幅抛售手中超过6成的
+  和中国的
   <strong>
-   港交所
+   小鹏汽车
   </strong>
-  股票，套现1.67亿港元。
+  又干上了。马斯克此前在推特上指小鹏汽车不但偷窃特斯拉的
+  <strong>
+   代码
+  </strong>
+  ，还偷窃苹果的代码。小鹏汽车随后直接在微博称要打得马斯克“找不着东。”有网友叹道，偷都这么牛，不服吗？
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  香港交易所（港交所）9月29日称，公司行政总裁(CEO)
-  <span href="https://zh.wikipedia.org/zh-cn/%E6%9D%8E%E5%B0%8F%E5%8A%A0" target="_blank">
-   李小加
+  11月21日，
+  <span href="https://www.secretchina.com/news/gb/tag/小鹏汽车" target="_blank">
+   小鹏汽车
   </span>
-  提早卸任，并自2021年1月1日起转任董事会高级顾问，为期六个月，届时将由联席总裁戴志坚将出任代理CEO职务。
+  董事长何小鹏的一条微博引起热议。何小鹏表示在微博中写道：“看来昨天我们发布的包含激光雷达的小鹏下一代自动驾驶架构，让西边的某人很不爽，连续用pigu发声。我想说的是，造谣早就证明是无法打败任何竞争对手的。明年开始，在中国的自动驾驶你要有思想准备被我们打得找不着东，至于国际，我们会相遇的。”
  </p>
  <p>
-  <span href="https://www.secretchina.com/news/gb/tag/港交所" target="_blank">
-   港交所
+  何小鹏的这段文字，被指是回应
+  <span href="https://www.secretchina.com/news/gb/tag/特斯拉" target="_blank">
+   特斯拉
   </span>
-  的公告称，李小加今天（9月29日）通知董事会有关其意欲提早退任，在董事会全面支持及同意下，李小加将继续担任港交所行政总裁及董事会的当然成员直至今年底，并由明年1月1日起转任董事会高级顾问，继续提供指导并确保过渡安排顺利进行。
+  CEO马斯克日前在推特针对小鹏汽车“抄袭”的指控。“西边的某人”指的就是马斯克。
  </p>
  <p>
-  值得注意的是，根据早前
-  <span href="https://zh.wikipedia.org/zh-cn/%E9%A6%99%E6%B8%AF%E4%BA%A4%E6%98%93%E6%89%80" target="_blank">
-   香港交易所
+  11月20日，小鹏汽车在广州车展发表声明称，
+  <span href="https://zh.wikipedia.org/wiki/小鹏汽车" target="_blank">
+   小鹏汽车
   </span>
-  在2020年5月7日刊发的公告，李小加原于其现时合约在2021年10月期满后不再寻求续任香港交易所集团行政总裁，此次李小加申请提前卸任的原因，
-  <span href="https://zh.wikipedia.org/zh-cn/%E9%A6%99%E6%B8%AF%E4%BA%A4%E6%98%93%E6%89%80" target="_blank">
-   港交所
+  将从2021年生产的车型开始升级其自动驾驶软件和硬件系统，采用激光雷达技术提高性能。该公司表示，车辆的物体识别性能将大大增强。
+ </p>
+ <p>
+  随后，
+  <span href="https://zh.wikipedia.org/wiki/伊隆·马斯克" target="_blank">
+   马斯克
   </span>
-  并未做出披露。
+  在推特表示：“他们有特斯拉的旧版软件，而没有我们最新的神经网络计算机。” 网友问小鹏汽车是否抄袭特斯拉旧代码，马斯克回答说：“是的，他们还偷了苹果的代码。”
  </p>
  <p>
-  香港交易所主席史美伦评价
-  <span href="https://www.secretchina.com/news/gb/tag/李小加" target="_blank">
-   李小加
+  事实上，小鹏和特斯拉的恩怨由来已久。马斯克已经不是第一次谴责小鹏汽车剽窃。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  2019年3月，
+  <span href="https://zh.wikipedia.org/wiki/特斯拉_(公司)" target="_blank">
+   特斯拉
   </span>
-  ：“他在香港资本市场的发展中扮演着举足轻重的角色，确保香港交易所在迎接未来的机遇和挑战方面处于非常有利的位置。”
- </p>
- <p>
-  现年58岁的戴志坚目前担任港交所联席总裁及首席营运总监，将自2021年1月1日起兼任代理行政总裁。
+  状告小鹏汽车剽窃Autopilot的代码，并将曾任特斯拉高级工程师、后来跳槽小鹏汽车任感知主管的曹光植等人告上法庭。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -96,7 +116,11 @@
   </div>
  </center>
  <p>
-  港交所表示，董事会有信心在戴志坚的领导下，香港交易所将继续成功实践《战略规划2019-2021》下的业务目标，而集团的业务运作亦将继续受惠于稳健的监督及执行。
+  曹光植在一份法庭文件中承认，他在2018年末将包含Autopilot源
+  <span href="https://www.secretchina.com/news/gb/tag/代码" target="_blank">
+   代码
+  </span>
+  的zip文件上传到他的个人iCloud账户，而他当时仍在该公司工作。曹是特斯拉40名能够接触到自动驾驶源代码的员工之一。但曹强调自己在离职时删除了这些文件。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -111,7 +135,7 @@
   </div>
  </center>
  <p>
-  《战略规划2019-2021》是李小加任期内推出的一项重磅计划，于2019年2月28日正式发布港交所公布了《战略规划2019-2021》，借此勾画出了香港交易所未来三年的发展蓝图。彼时，李小加还专程就这份战略规划发布网志，就规划聚焦的主题、与以往规划的异同和联系、科技战略等问题分享了制定这份规划的来龙去脉。
+  特斯拉认为，这些盗走的文件等于让小鹏汽车获得了对自动驾驶代码不受限制的访问。而小鹏汽车所采用的自动驾驶技术，确实与特斯拉的自动驾驶极为相似。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -126,7 +150,7 @@
   </div>
  </center>
  <p>
-  在2019年12月18日，李小加10年来首次减持港交所股份，其大幅出脱手中超过6成的港交所股票，总计卖出65万股，平均每股256.533港元，套现1.67亿港元，引发市场密切关注。
+  特斯拉表示，在曹光植投奔小鹏汽车1年多之前，就有一位特斯拉自动驾驶机器学习方面的领军人物谷俊丽（Junli Gu），跳槽到小鹏汽车，并成为小鹏汽车自动驾驶部门的主管。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -141,7 +165,7 @@
   </div>
  </center>
  <p>
-  今年59岁的李小加于2009年10月加入港交所，自2010年起担任港交所总裁，任期至2021年10月15日。他于2010年第一次买入港交所股票，当时持股达7.32万股，此后经过多次增持，持股数于2019年4月达到105.38万股，期间并未出现减持。
+  据悉，小鹏汽车出品的电动SUV汽车，同特斯拉显示在仪表盘的自动驾驶界面几乎一模一样。这种相似度，成为特斯拉状告其前自动驾驶部门雇员的证据之一。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -156,7 +180,11 @@
   </div>
  </center>
  <p>
-  香港《明报》指出，如果连同李小加上任后的年薪，他上任9年总计超过3.4亿港元入袋。
+  2018年7月11日，美国联邦调查局（FBI）以窃取商业机密罪逮捕并起诉了苹果前雇员张晓朗（音译，XiaoLang Zhang）。张涉嫌窃取苹果公司自动驾驶车项目的专有技术信息，想要使其新雇主——
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
+  </span>
+  初创公司“小鹏汽车”（Xiaopeng Motors）受益。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -171,7 +199,22 @@
   </div>
  </center>
  <p>
-  李小加上任第3年，年薪已超越前任港交所行政总裁周文耀，之后李小加的薪资水涨船高，若计入薪资、现金分红、其它福利等，李小加的年薪已由最初的259万港元，到2018年已经一路增加到近2,900万港元。
+  2019年12月，CleanTechnica发表题为“小鹏汽车自主研发自动驾驶技术让其维持低价”的文章，马斯克用两个笑哭的表情嘲讽道：“自主研发”。随后又在回复一名网友时表示，“（小鹏的自动驾驶软件）确实是我们的灵感，但这是一个旧款的特斯拉软件版本，所以效果有限”。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  对马斯克的谴责，小鹏在一份声明中称，特斯拉是在霸凌一个年轻竞争对手。但网易网友却是一边倒的嘲笑小鹏的无耻。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -190,7 +233,7 @@
   </ins>
  </center>
  <p>
-  香港投资杂志《经济一周》引述信诚证券联席董事张智威分析称，通常上市公司主席或行政总裁作空，都会给予市场一个股价见顶的负面信号，也会影响市场信心。
+  “偷都这么理直气壮，数千年未见。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -205,7 +248,7 @@
   </div>
  </center>
  <p>
-  2020年1月9日，李小加出席公开活动时首次开腔谈及减持港交所股份，但推诿是妻子提议他这样做，“我家中有另一位主席”。
+  “ 没有匠心，没有匠气，只有匪气。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -220,7 +263,7 @@
   </div>
  </center>
  <p>
-  李小加称，自己于 256 港元水平沽出，现在港交所股价已升近 20 港元，证明外界对港交所都充满信心。
+  “打架没赢过，吹牛没输过。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -235,7 +278,22 @@
   </div>
  </center>
  <p>
-  被问及是否另有考虑，李小加就称，要由董事会考虑是否有意继续委任他，他才会思考决定，坦言也会反问自己：“我已做了10年（行政总裁），还有什么？”
+  “偷窃、吹牛逼、打嘴仗最在行！”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “人马斯克玩火箭，你一个骗补贴的瞎往上蹭什么？”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -267,7 +325,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -299,13 +357,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/947679.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/947679.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/947679.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/29/947679.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/953436.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/953436.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/953436.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/22/953436.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/947679.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/953436.md' width='0px' height='0px'/>
