--- a/pages/nf4514/n12565761.md
+++ b/pages/nf4514/n12565761.md
@@ -53,16 +53,16 @@
 </h3>
 <p>
  据新唐人电视台采访报导，周六（21日），波士顿选民蕾拉·坎贝尔（Rayla Campbell）参加了该市举行的“停止窃选”集会。
- <br/>
- <figure class="wp-caption aligncenter" id="attachment_12566707" style="width: 600px">
-  <ok href="https://i.epochtimes.com/assets/uploads/2020/11/cam-e1606002073426.jpg">
-   <img alt="" class="size-full wp-image-12566707" src="https://i.epochtimes.com/assets/uploads/2020/11/cam-e1606002073426.jpg"/>
-  </ok>
-  <br/><figcaption class="wp-caption-text">
-   周六（21日），波士顿选民蕾拉·坎贝尔（Rayla Campbell）参加了该市举行的“停止窃选”集会。 (NTD Television)
-  </figcaption><br/>
- </figure><br/>
- <br/>
+</p>
+<figure class="wp-caption aligncenter" id="attachment_12566707" style="width: 600px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2020/11/cam-e1606002073426.jpg">
+  <img alt="" class="size-full wp-image-12566707" src="https://i.epochtimes.com/assets/uploads/2020/11/cam-e1606002073426.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  周六（21日），波士顿选民蕾拉·坎贝尔（Rayla Campbell）参加了该市举行的“停止窃选”集会。 (NTD Television)
+ </figcaption><br/>
+</figure><br/>
+<p>
  她表示：“我认为，左派媒体甚至在计票之前就宣布选举的赢家，这是一种压制美国选民声音的方式。我们作为美国人，需要捍卫真正、真实的选举、合法选票被计入。”
 </p>
 <p>
@@ -88,16 +88,16 @@
 </h3>
 <p>
  据新唐人电视台采访报导，周六（21日），选民帕蒂·安妮（Patti Anne）参加了伊利诺伊州弗农丘陵（Vernon Hills）举行的“停止窃选”集会。
- <br/>
- <figure class="wp-caption aligncenter" id="attachment_12566655" style="width: 600px">
-  <ok href="https://i.epochtimes.com/assets/uploads/2020/11/ILI-e1605999005173.jpg">
-   <img alt="" class="size-full wp-image-12566655" src="https://i.epochtimes.com/assets/uploads/2020/11/ILI-e1605999005173.jpg"/>
-  </ok>
-  <br/><figcaption class="wp-caption-text">
-   周六（21日），选民帕蒂·安妮（Patti Anne）参加了伊利诺伊州弗农丘陵（Vernon Hills）举行的“停止窃选”集会。 (NTD Television)
-  </figcaption><br/>
- </figure><br/>
- <br/>
+</p>
+<figure class="wp-caption aligncenter" id="attachment_12566655" style="width: 600px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2020/11/ILI-e1605999005173.jpg">
+  <img alt="" class="size-full wp-image-12566655" src="https://i.epochtimes.com/assets/uploads/2020/11/ILI-e1605999005173.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  周六（21日），选民帕蒂·安妮（Patti Anne）参加了伊利诺伊州弗农丘陵（Vernon Hills）举行的“停止窃选”集会。 (NTD Television)
+ </figcaption><br/>
+</figure><br/>
+<p>
  安妮说，从一开始，她就一直在抗议窃取这次大选。
 </p>
 <p>
@@ -117,16 +117,16 @@
 </h3>
 <p>
  据新唐人电视台采访报导，周六（21日），波士顿选民诺曼·施瓦茨（Norman Schwartz）参加了该市举行的“停止窃选”集会。
- <br/>
- <figure class="wp-caption aligncenter" id="attachment_12566635" style="width: 600px">
-  <ok href="https://i.epochtimes.com/assets/uploads/2020/11/red-e1605997235117.jpg">
-   <img alt="" class="size-full wp-image-12566635" src="https://i.epochtimes.com/assets/uploads/2020/11/red-e1605997235117.jpg"/>
-  </ok>
-  <br/><figcaption class="wp-caption-text">
-   周六（11月21日），波士顿选民诺曼·施瓦茨（Norman Schwartz）参加了该市举行的“停止窃选”集会。(NTD Television)
-  </figcaption><br/>
- </figure><br/>
- <br/>
+</p>
+<figure class="wp-caption aligncenter" id="attachment_12566635" style="width: 600px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2020/11/red-e1605997235117.jpg">
+  <img alt="" class="size-full wp-image-12566635" src="https://i.epochtimes.com/assets/uploads/2020/11/red-e1605997235117.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  周六（11月21日），波士顿选民诺曼·施瓦茨（Norman Schwartz）参加了该市举行的“停止窃选”集会。(NTD Television)
+ </figcaption><br/>
+</figure><br/>
+<p>
  他表示，整个总统选举都充满了可疑的活动和反常现象，破坏了每张选票的诚信，但人们不能保持沉默。
 </p>
 <p>
@@ -437,7 +437,7 @@
    <img alt="" class="size-large wp-image-12551190" src="https://i.epochtimes.com/assets/uploads/2020/11/2011142233551160-600x400.jpg"/>
   </ok>
   <br/><figcaption class="wp-caption-text">
-   图为11月14日在华盛顿DC约有五十万名来自全美各地的民众，参与停止窃选集会游行。（Stop the Steal）大游行和集会。（李莎/大纪元）
+   2020年11月14日，华盛顿DC，来自全美各地约五十万人参加停止窃选（Stop the Steal）大游行和集会。（李莎／大纪元）
   </figcaption><br/>
  </figure><br/>
  <p>
