--- a/pages/nf4514/n12569219.md
+++ b/pages/nf4514/n12569219.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新11.23】川普团队乔州将提大诉讼" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229684615-600x400.jpg"/>
+<div><img alt="【大选更新11.23】鲍威尔：禁共产主义者窃国" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/Sidney-Powell-EpochTimes_510A8666-1-1-600x400.jpg"/>
 <div class="caption">
- 2020年11月19日，华盛顿特区共和党全国委员会（Republican National Committee）总部，鲁迪‧朱利安尼和其他川普法律顾问举行新闻发布会。朱利安尼指着一张地图向媒体讲述与2020年大选舞弊有关的各种诉讼。(Drew Angerer/Getty Images)
+ 图为著名律师鲍威尔（Sidney Powell）。(Drew Angerer/Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
