--- a/pages/p5/953546.md
+++ b/pages/p5/953546.md
@@ -1,4 +1,4 @@
-### 美总统大选辩论后 就业报告给川普送好消息(图)
+### 中国第三家金融机构破产 个人存款怎么办？(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align: center;">
-  <img alt="川普 武汉肺炎 就业" src="https://img2.secretchina.com/pic/2019/7-25/p2475991a471824073-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="金融机构 包商银行 破产 存款" src="https://img3.secretchina.com/pic/2020/8-27/p2763161a531977506-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   9月增加了74.9万就业岗位，超出市场预期。（图片来源：Adobe Stock）
+   中国有记录可查的第三家金融机构破产，个人的存款怎么办？（图片来源：Adobe Stock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,61 +21,65 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月30日讯】（看中国记者李正鑫综合报导）美国两党总统候选人举行辩论之际，经济和
+  【看中国2020年11月23日讯】（看中国记者文龙综合报导）11月23日，中国银保监会网站发布的公告显示，
   <strong>
-   就业
+   包商银行
   </strong>
-  情况是各界普遍关心的话题。在
+  进入
   <strong>
-   武汉肺炎
+   破产
   </strong>
-  疫情之下，9月30日发布的就业报告，给美国总统
+  程序。这是有记录可查的第三家
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
-    川普
+   <span href="https://www.secretchina.com/news/gb/tag/金融机构" target="_blank">
+    金融机构
    </span>
-   (特朗普)
   </strong>
-  送去个好消息，9月增加了74.9万就业岗位，超出市场预期。
+  破产，个人的
+  <strong>
+   存款
+  </strong>
+  怎么办？
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  世界最大的人力资源管理公司之一的安德普翰（ADP Research Institute）9月30日发布的报告显示，美国企业9月增加了74.9万个工作岗位，超过彭博调查的经济学家预期的65万个工作岗位增长。表明随着需求从
-  <span href="https://zh.wikipedia.org/zh-cn/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E" target="_blank">
-   武汉肺炎
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/包商银行" target="_blank">
+    包商银行
+   </span>
+   被接管到期 进入破产程序
+  </strong>
+ </p>
+ <p>
+  今年5月，
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
   </span>
-  疫情最严重阶段实现反弹，劳动力市场逐步复苏的态势持续。
+  央行称，因疫情影响，包商银行后续处置工作进度需适当延后，接管期限延长六个月，自2020年5月24日起至2020年11月23日止。
  </p>
  <p>
-  ADP的数据显示，8月数据上修为增加481,000人。
- </p>
- <p>
-  在需求仍在增长的行业，企业仍在继续招聘，因此数据可视为是劳动力市场的好消息。ADP研究所副总裁兼联合负责人阿胡·伊迪尔迪马兹（Ahu Yildirmaz）在一份声明中说：“劳动力市场继续逐步复苏”；“9月份，大多数行业和公司规模都在贸易、运输和公用事业方面有所增长；和制造业处于领先地位。”
- </p>
- <p>
-  大多数行业在9月份增加招聘，其中制造业增加最多，增加了130,000。贸易、运输和公用事业一共增长186,000；保健和社会援助增加了101,000。休闲和酒店业是受
-  <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
-   武汉肺炎
+  11月23日接管到期，中国银保监会网站发布《关于包商银行股份有限公司
+  <span href="https://www.secretchina.com/news/gb/tag/破产" target="_blank">
+   破产
   </span>
-  疫情打击最严重的行业之一，增加了92,000个工作岗位，商业服务增加了78,000，建筑业增加了60,000。
+  的批复》称，原则同意包商银行进入破产程序。
  </p>
  <p>
-  在美国这种鼓励创新的资本市场环境中，虽然武汉肺炎疫情对经济和
-  <span href="https://zh.wikipedia.org/zh-cn/%E5%B0%B1%E4%B8%9A" target="_blank">
-   就业
-  </span>
-  市场造成破坏，但是美国的创新力量却源源不断出现。
+  11月14日，包商银行在中国货币网发布公告称，该行拟于11月13日对已发行的65亿元（人民币，下同）“2015包行二级债”本金实施全额减记，并对任何尚未支付的累积应付利息（总计：585,639,344.13元）不再支付，包商银行已于11月12日通知中央国债登记结算有限公司，授权其在减记执行日进行债权注销登记操作。
+ </p>
+ <p>
+  二级资本债是商业银行为增加二级资本公开发行的债券。根据《巴塞尔协议》，商业银行资本由一级资本和二级资本甚至三级资本构成。二级资本亦称附属资本或补充资本，是商业银行资本基础中扣除核心资本之外的其它资本成份，是反映银行资本充足状况的指标。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -90,7 +94,7 @@
   </div>
  </center>
  <p>
-  美国人口普查局（Census Bureau）最新的数据显示，截至9月19日为止的一周之内，新申请成立的企业家数达97,190家，比去年同期飙升45.1%。由于第二季企业形成家数已达纪录的883,174家，预计在10月14日发布的第三季度数据可能持续攀高。
+  债务减记指债务在规定期限内无法偿还，并且确定无能力偿还时，将债务作为不良债务进行核销，通俗点来说，就是债务一笔勾销。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -105,11 +109,7 @@
   </div>
  </center>
  <p>
-  这份报告显示，许多业主和创业家并没有将疫情视为对企业环境负面的经营危机，反而将之视为新兴事业发起的绝佳契机，这很可能促成美国经济未来相当正面的良性循环，未来
-  <span href="https://www.secretchina.com/news/gb/tag/就业" target="_blank">
-   就业
-  </span>
-  机会的创造或许优于许多专家的预期。
+  对于全额减记二级资本债的原因，包商银行表示，11月11日收到了中国央行、银保监会发布的《关于认定包商银行发生无法生存触发事件的通知》。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -124,7 +124,7 @@
   </div>
  </center>
  <p>
-  国际投行高盛在报告中分析，新事业的成立对于就业的创造举足轻重，也是观察就业市场展望的关键因素，因为新兴事业往往贡献就业市场很大的份额。
+  包商银行65亿元人民币二级资本债因“无法生存触发事件”全额减记，这是中国金融史上首例事件。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -139,7 +139,69 @@
   </div>
  </center>
  <p>
-  高盛乐观估计，在经过3～4月疫情的冲击之后，创业的企业家已通过审慎的评估和市场的验证，第三季度新设立的企业存续且成功的概率已大幅攀高。
+  中国官媒《证券时报》8月3日报道称，“明天系”209家空壳公司套取1,560亿元，全部成为包商银行的不良贷款，包商银行信用风险的惨痛教训。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  截至目前，金融大鳄肖建华经营20多年、资产规模达3万亿的“明天系”基本被瓦解。在鼎盛时期，“明天系”控股23家、参股21家金融机构。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  据悉，肖建华只是前国家副主席曾庆红家族的马前卒。并且，肖建华也替多个中共高官家族工作。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   此前已经有两家金融机构破产
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  其实中国的银行破产倒闭早已不是什么新鲜事了，有记录可查的一次是1998年亚洲金融危机期间，海南发展银行因为不良资产比例大、资本金不足，信誉差等原因，在耗尽了准备金和政府34亿元的救助金之后仍未能摆脱困局，最终宣布破产。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -158,7 +220,7 @@
   </ins>
  </center>
  <p>
-  高盛指出，这次的新事业创造比上次金融危机的2008～2009年更高，主要有两个理由，其一是政府祭出的货币和财政宽松政策规模更庞大，缓和了金融环境的紧张，也提供了许多人在家创业的良好环境。此外，疫情也创造了另类的事业商机，让许多创新人才跃跃欲试。
+  另一次是2012年河北省肃宁县尚村农信社进入破产司法程序，成为中国首家被批准破产的农村信用社。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -173,7 +235,7 @@
   </div>
  </center>
  <p>
-  马里兰大学经济学教授霍尔蒂万格（John Haltiwanger）也说，疫情虽然让许多人的生活回到大萧条时代，但同时也是让许多创业主大量崛起的时刻。
+  除这两家之外，其实，还有一家金融机构差一点倒闭。汕头商业银行由于经营问题，产生了很多坏账，而无法向个人储户兑现。2001年，中国央行勒令其停业整顿。但汕头商业银行规模较小，总负债在50亿元左右。所以，最终度过危机。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -188,11 +250,13 @@
   </div>
  </center>
  <p>
-  上述信息给美国总统
-  <span href="https://zh.wikipedia.org/wiki/%E5%94%90%E7%B4%8D%E5%BE%B7%C2%B7%E5%B7%9D%E6%99%AE" target="_blank">
-   川普
-  </span>
-  送去好消息。在9月29日结束了共和党总统候选人川普和民主党总统候选人拜登的首场电视辩论，辩论由福克斯新闻主播华莱士（Chris Wallace）主持，整场辩论由6个主题组成，每个主题辩论时间为15分钟，全程持续90分钟。此次辩论的主战场在中西部俄亥俄州的克利夫兰市。
+  <strong>
+   金融机构破产后，个人的
+   <span href="https://www.secretchina.com/news/gb/tag/存款" target="_blank">
+    存款
+   </span>
+   怎么办？
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -207,7 +271,22 @@
   </div>
  </center>
  <p>
-  6个回合下来，双方交锋颇为激烈，过程中多次互相打断对方。常常说错话的拜登，没有出现之前那么严重的失言（如2亿美国人死于武汉肺炎），但也犯下一些错误。相比之下，川普一个半小时精神奕奕，保持了一贯的强势风格，辩论中反应也很敏锐，时不时对拜登发起进攻。其中，川普不失时机的抓住机会，犀利的抨击了拜登儿子的经济丑闻，是这场辩论的一个精彩看点。
+  中国《存款保险条例》中明确规定，一旦银行破产，最高赔偿为50万元。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  但是，要注意的是，银行的理财产品并不属于存款，所以也不适用于存款保险制度，不会按照50万的上限给予赔偿。因此中国民众购买银行理财产品就要小心了，一旦出现意外就是血本无归。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -239,7 +318,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -271,13 +350,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/947783.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/947783.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/947783.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/30/947783.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/953546.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/953546.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/953546.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/23/953546.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/947783.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/953546.md' width='0px' height='0px'/>
